applied grid to start page, fixed alignment on buttons, applied new color scheme as suggestion

--- a/RPS/FirstPage/StartPage.css
+++ b/RPS/FirstPage/StartPage.css
@@ -33,15 +33,26 @@
     padding:0; /*if your want to padding */
  }
  .buttons{
+  cursor:pointer;
     width: 300px;
     color: purple;
- font-size: 1.69rem;
- padding: 20px;
+  font-size: 1.69 rem;
+  padding: 20px;
  text-align: center;
- vertical-align: baseline;
+ border-radius: 30px;
+ 
  }
  .buttons svg{
     width: 50px;
     height:50px;
+    padding: 3px;
     
  }
+ .buttons:hover
+ {
+   background-color: #ea7186;
+   color: black;
+   box-shadow: 5,5,0,5,rgb(143, 49, 49);
+ }
+ 
+ 
