--- a/RPS/TemplatePage.css
+++ b/RPS/TemplatePage.css
@@ -29,21 +29,21 @@ footer{
 
 header{
   grid-area: header;
-  background-color: #caf0f8;
+  background-color: #a767ff;
 }
 nav{
   grid-area: nav;
-  background-color: #eaf6f8;
+  background-color: #ea7186;
 }
 main{
   grid-area: main;
-  background-color: #caf0f8;
+  background-color: #fefced;
 }
 aside{
   grid-area: aside;
-  background-color: #eaf6f8;
+  background-color: #f2c86e;
 }
 footer{
   grid-area: footer;
-  background-color: #caf0f8;
+  background-color: #a767ff;
 }
